[package]
name = "UDP-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
local-ip-address = "0.4.9"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
